<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegisterActivity"
    android:background="@color/cyan">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/Layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginUsernameHeader"
            android:fontFamily="sans-serif-black"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginEmailField"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPasswordHeader"
            android:fontFamily="sans-serif-black"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUserPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:id="@+id/loginButton"
            android:onClick="login"
            android:text="@string/loginButton" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/loginGoogleButton"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/google"
            android:onClick="googleSignIn"
            android:text="@string/loginGoogle"
            android:textColor="@color/bluetext" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:id="@+id/registration"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/blue"
                android:text="@string/registerButton"
                android:textColor="@color/white"
                android:onClick="register" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>